--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -27,14 +27,10 @@
             android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            style="@style/TextAppearance.Title"
             android:layout_marginTop="16dp"
-            android:background="#ff9999"
-            android:fontFamily="monospace"
             android:text="@string/about_google_developer_groups"
             android:textAllCaps="true"
-            android:textColor="#555555"
-            android:textSize="24sp"
-            android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/end_grid"
             app:layout_constraintStart_toStartOf="@+id/start_grid"
             app:layout_constraintTop_toBottomOf="@id/image" />
@@ -53,8 +49,7 @@
                 android:id="@+id/subtitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:textColor="#555555"
+                style="@style/TextAppearance.Subtitle"
 
                 android:text="@string/gdgs_are"
                 android:layout_marginTop="13dp"
