--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -8,7 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="16dp"
+            android:paddingBottom="@dimen/spacing_normal"
             android:clipToPadding="true"
             tools:context=".home.HomeFragment">
 
@@ -28,7 +28,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             style="@style/TextAppearance.Title"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/spacing_normal"
             android:text="@string/about_google_developer_groups"
             android:textAllCaps="true"
             app:layout_constraintEnd_toStartOf="@+id/end_grid"
@@ -72,7 +72,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:scaleType="centerCrop"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="@dimen/spacing_normal"
                 app:srcCompat="@drawable/wtm"
                 app:layout_constraintTop_toBottomOf="@id/description"
                 app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +84,7 @@
                 android:id="@+id/start_grid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintGuide_begin="16dp"
+                app:layout_constraintGuide_begin="@dimen/spacing_normal"
                 android:orientation="vertical"/>
 
         <androidx.constraintlayout.widget.Guideline
@@ -92,6 +92,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_end="16dp"/>
+                app:layout_constraintGuide_end="@dimen/spacing_normal"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
