--- a/app/src/main/res/layout/add_gdg_fragment.xml
+++ b/app/src/main/res/layout/add_gdg_fragment.xml
@@ -114,53 +114,25 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="32dp"
                     android:layout_marginBottom="4dp"
-                    app:layout_constraintBottom_toTopOf="@+id/EditTextWhy"
+                   app:layout_constraintBottom_toTopOf="@+id/contentGroup"
                     android:singleLine="true"/>
 
             <!--wrap in a layout to group-->
-            <!--<LinearLayout -->
-            <!--android:id="@+id/contentGroup"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:focusable="true"-->
-            <!--app:layout_constraintTop_toBottomOf="@id/EditTextRegion"-->
-            <!--android:orientation="vertical"-->
-            <!--app:layout_constraintStart_toStartOf="@+id/EditTextRegion"-->
-            <!--app:layout_constraintEnd_toEndOf="@+id/EditTextRegion"-->
-            <!--android:layout_marginTop="@dimen/spacing_normal"-->
-            <!--app:layout_constraintBottom_toTopOf="@+id/button"-->
-            <!--android:layout_marginBottom="8dp">-->
+            <LinearLayout
+            android:id="@+id/contentGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:focusable="true"
+            app:layout_constraintTop_toBottomOf="@id/EditTextRegion"
+            android:orientation="vertical"
+            app:layout_constraintStart_toStartOf="@+id/EditTextRegion"
+            app:layout_constraintEnd_toEndOf="@+id/EditTextRegion"
+            android:layout_marginTop="@dimen/spacing_normal"
+            app:layout_constraintBottom_toTopOf="@+id/button"
+            android:layout_marginBottom="8dp">
 
-            <TextView
-                    android:id="@+id/labelTextWhy"
-                    android:contentDescription="@string/motivation"
-                    android:text="@string/motivation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_normal"
-                    android:layout_marginStart="32dp"
-                    app:layout_constraintTop_toBottomOf="@+id/EditTextRegion"
-                    android:layout_marginBottom="1dp"
-                    app:layout_constraintBottom_toTopOf="@+id/EditTextWhy"
-                    app:layout_constraintStart_toStartOf="parent"/>
 
-            <EditText
-                    android:id="@+id/EditTextWhy"
-                    android:hint="@string/enter_motivation"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textMultiLine"
-                    android:ems="10"
-                    app:layout_constraintTop_toBottomOf="@+id/EditTextRegion"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toTopOf="@+id/button"
-                    android:layout_marginTop="32dp"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginBottom="8dp"/>
-
-            <!--</LinearLayout>-->
+            </LinearLayout>
 
             <Button
                     android:id="@+id/button"
@@ -170,10 +142,10 @@
                     android:layout_height="24dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/EditTextWhy"
                     android:backgroundTint="#00FF00"
                     android:textColor="#FF0000"
                     android:textSize="12sp"
+                    app:layout_constraintTop_toBottomOf="@+id/contentGroup"
                     android:layout_marginBottom="12dp"
                     android:layout_marginEnd="40dp"
                     android:onClick="@{() -> viewModel.onSubmitApplication()}"/>
